--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,21 @@
-<style>
+.grid-container{
+  display: grid;
+  grid-template-colummns: repeat(4, 50px);
+  grid-auto-rows: minimax(1fr, auto);
+  column-gap: 1rem;
+  row-gap: 0.5rem;
+  /* grid-template-areas: "body body" */
+}
+
+/* .grid-item{
+  grid-area: body;
+  grid-class: "card-body";
+} */
+
+// Use it with "div class="name".
 .sidenav {
   height: 100%; /* Full-height: remove this if you want "auto" height */
-  width: 160px; /* Set the width of the sidebar */
+  width: 190px; /* Set the width of the sidebar */
   position: fixed; /* Fixed Sidebar (stay in place on scroll) */
   z-index: 1; /* Stay on top */
   top: 0; /* Stay at the top */
@@ -22,4 +36,3 @@
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
-</style>
