--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,39 @@
-.background{
-  background-color: #ffd0e3
-  /* #1c87c9; */
+.background-container{
+  display: grid;
+  grid-template-columns: 0.5fr 2fr 0.5fr; // Create thirds. Left and right cafe background. Center pink.
+  width: 100%;
+  height: 100%;
+  
 }
 
+.left-background{
+  background: url('cozy-autumn-cafe-illustration_23-2149076539.jpg'); no-repeat center center / cover; // Image is not repeated and is centered to cover whole left-background container.
+  /* background-color: #1c87c9; */
+}
+
+.right-background{
+  background-color: #1c87c9;
+}
+
+
+.center-background{
+  background: url('cozy-autumn-cafe-illustration_23-2149076539.jpg'); no-repeat center center / cover;
+  /* background-color: #ffd0e3; */
+}
+
+
+// Use it with "div class="name".
+.sidenav {
+  height: 100%; /*Full-height: remove this if you want "auto" height */
+  width: 160px; /* Set the width of the sidebar */
+  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+  background-color: #111; /* Black */
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 20px;
+}
 
 .grid-container{
   display: grid;
@@ -38,19 +69,6 @@
 .card-title {
   font-size: 1.25rem;
   margin-bottom: 0.5rem;
-}
-
-// Use it with "div class="name".
-.sidenav {
-  height: 100%; /*Full-height: remove this if you want "auto" height */
-  width: 160px; /* Set the width of the sidebar */
-  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-  z-index: 1; /* Stay on top */
-  top: 0; /* Stay at the top */
-  left: 0;
-  background-color: #111; /* Black */
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 20px;
 }
 
 /* Style page content */
